feat: Add sidebar and header

--- a/src/app/views/views.component.html
+++ b/src/app/views/views.component.html
@@ -1,3 +1,9 @@
+<nav id="mainNav">
+  <app-header></app-header>
+</nav>
+
 <main class="view-container">
   <router-outlet></router-outlet>
 </main>
+
+<app-sidenav></app-sidenav>
