feat: Add products CRUD

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,1 +1,4 @@
-<p>dashboard works!</p>
+<div class="dashboard-wrapper">
+  <img class="chart" src="./assets/img/chart.svg" alt="Imagem de um gráfico de exemplo" />
+  <h3 class="text-500">Em breve 💜</h3>
+</div>
