--- a/src/app/modules/products/views/products-list/products-list.component.html
+++ b/src/app/modules/products/views/products-list/products-list.component.html
@@ -2,13 +2,16 @@
   <h3 class="mt-0">Produtos</h3>
 
   <form [formGroup]="searchForm" (ngSubmit)="findProducts()">
-    <div class="grid mb-3">
-      <div class="col-8">
-        <input type="text" pInputText formControlName="searchText" class="w-full" />
+    <div class="p-fluid grid formgrid mb-3">
+      <div class="field col-8">
+        <label for="fSearchText">Nome</label>
+        <input id="fSearchText" type="text" pInputText formControlName="searchText" class="w-full" />
       </div>
 
-      <div class="col-4">
+      <div class="field col-4">
+        <label for="fCategory">Categoria</label>
         <p-dropdown
+          inputId="fCategory"
           formControlName="category"
           optionLabel="label"
           optionValue="value"
@@ -19,46 +22,88 @@
     </div>
 
     <div class="flex align-items-center justify-content-end gap-2">
-      <button
-        type="button"
-        pButton
-        pRipple
-        label="Limpar"
-        class="p-button-sm p-button-secondary"
-        (click)="clearSearchForm()"
-      ></button>
+      <button type="reset" pButton pRipple label="Limpar" class="p-button-sm p-button-secondary"></button>
       <button type="submit" pButton pRipple label="Pesquisar" class="p-button-sm"></button>
     </div>
   </form>
 </p-card>
 
-<p-table
-  [value]="products"
-  [lazy]="true"
-  [paginator]="true"
-  [rows]="4"
-  [totalRecords]="productsMeta.pagination.total"
-  [loading]="isLoadingProducts"
-  (onPage)="findProducts($event)"
+<p-card>
+  <app-no-content *ngIf="!isLoadingProducts && !products.length; else productsTable"></app-no-content>
+
+  <ng-template #productsTable>
+    <p-table
+      [value]="products"
+      [lazy]="true"
+      [paginator]="true"
+      [rows]="4"
+      [totalRecords]="productsMeta.pagination.total"
+      [loading]="isLoadingProducts"
+      (onPage)="findProducts($event)"
+    >
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Nome</th>
+          <th>Categoria</th>
+          <th class="w-10rem text-right">Preço</th>
+          <th class="w-10rem"></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-product>
+        <tr>
+          <td>
+            <div class="flex flex-column">
+              <strong>{{ product.attributes.name }}</strong>
+              <small>{{ product.attributes.description }}</small>
+            </div>
+          </td>
+          <td>
+            <p-tag [value]="product.attributes.category"></p-tag>
+          </td>
+          <td class="text-right">{{ product.attributes.price | currency : 'BRL' : 'symbol' : '1.2-2' }}</td>
+          <td>
+            <button
+              pButton
+              pRipple
+              type="button"
+              class="p-button-sm p-button-rounded p-button-text"
+              (click)="openProductForm(product.id)"
+            >
+              <i class="material-icons-round">edit</i>
+            </button>
+
+            <button
+              pButton
+              pRipple
+              type="button"
+              class="p-button-sm p-button-rounded p-button-danger p-button-text"
+              (click)="confirmDeleteProduct($event, product.id)"
+            >
+              <i class="material-icons-round">delete</i>
+            </button>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </ng-template>
+</p-card>
+
+<p-dialog
+  header="Produto"
+  [modal]="true"
+  [style]="{ width: '50vw' }"
+  [draggable]="false"
+  [resizable]="false"
+  [(visible)]="displayProductForm"
+  (onHide)="closeProductForm()"
 >
-  <ng-template pTemplate="header">
-    <tr>
-      <th>Nome</th>
-      <th>Categoria</th>
-      <th class="w-10rem">Preço</th>
-      <th class="w-10rem"></th>
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-product>
-    <tr>
-      <td>{{ product.attributes.name }}</td>
-      <td>{{ product.attributes.category }}</td>
-      <td>{{ product.attributes.price | currency : 'BRL' : 'symbol' : '1.2-2' }}</td>
-      <td>
-        <button pButton pRipple type="button" class="p-button-rounded p-button-text">
-          <i class="material-icons-round">edit</i>
-        </button>
-      </td>
-    </tr>
-  </ng-template>
-</p-table>
+  <app-product-form
+    *ngIf="displayProductForm"
+    [productId]="selectedProductId"
+    (productSaved)="productSaved($event)"
+  ></app-product-form>
+</p-dialog>
+
+<button pButton pRipple type="button" class="p-button-rounded shadow-7 new-product-btn" (click)="openProductForm(null)">
+  <i class="material-icons-round">add</i>
+</button>
