--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <router-outlet></router-outlet>
 
 <p-confirmPopup></p-confirmPopup>
-<p-toast></p-toast>
+<p-toast position="bottom-center"></p-toast>
