feat: Apply container/presentation pattern

--- a/src/app/features/products/views/products-search/components/product-form/product-form.component.html
+++ b/src/app/features/products/views/products-search/components/product-form/product-form.component.html
@@ -48,7 +48,7 @@
   </div>
 
   <div class="flex align-items-center justify-content-end gap-2 mt-2">
-    <button *ngIf="!productId" type="reset" pButton class="p-button-secondary" label="Limpar"></button>
+    <button *ngIf="!product" type="reset" pButton class="p-button-secondary" label="Limpar"></button>
     <button type="submit" pButton label="Salvar"></button>
   </div>
 </form>
